# teamup-test

./: .env.sample  README.md  pyproject.toml
src/: manage.py
src/config/: urls.py  yasg.py
src/config/settings/: base.py  local.py
src/ieqtests/core/: admin.py  apps.py  models.py  urls.py
src/ieqtests/core/api/: mixins.py  serializers.py  validators.py  views.py
src/ieqtests/core/migrations/: 0001_initial.py
